--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@ h1 {
 	font-family: 'Berkshire Swash', Georgia, serif;
 	font-size: 600%;
     line-height: 80%;
-    margin: 80px 0 30px; }
+    margin: 60px 0 30px; }
 	
 h2, h3, h4 {
 	font-family: 'Droid Sans', Arial, sans-serif;
@@ -74,7 +74,10 @@ a:hover {
     color: #333; }
 
 .description {
-    font-size: 80%; }
+    font-size: 80%;
+    clear: both;
+    line-height: 160%;
+    margin-bottom: 10px; }
 
 .intro {
     font-weight: 300;
@@ -177,10 +180,10 @@ input[type="submit"]:hover {
 /************************************/
 
 #main-content {
-    background: url('pic.jpg'); 
-    background-size: cover; 
-    background-position: center;
-    max-height: 350px; }
+    background: url('bg.jpg'); 
+    background-size: 120%;
+    background-position: -120px -240px;
+    max-height: 320px; }
 
 #home-projectlist {
     min-height: 200px;
@@ -189,25 +192,31 @@ input[type="submit"]:hover {
 
 
 .project-thumbnail {
+    position: relative;
     width: 100%;
-    height: 120px;
+    height: 150px;
     border: 1px solid #eaeaea;
     margin: 10px 0 20px;
     overflow: hidden;
-    box-shadow: 0px 0px 3px #eee;
-}
+    box-shadow: 0px 0px 3px #eee; }
 
 .project-thumbnail img {
+    position: absolute;
+    top: -30px;
     width: 100%;
-    height: auto;
-}
+    height: auto; }
 
 .project-fullsize {
+    position: relative;
     width: 99%;
     height: 400px;
     border: 1px solid #eaeaea;
     margin: 20px 0 40px;
-}
+    overflow: hidden; }
+
+.project-fullsize img {
+    position: absolute;
+    top: -200px; }
 
 
 /************************************/
@@ -225,6 +234,44 @@ section#tech-list h4 {
 
 
 /************************************/
+/*     ADVANCED SEARCH              */
+/************************************/
+
+
+#advanced_searchform {
+    overflow: auto;
+    background: #eaeaea;
+    padding: 40px;
+    margin-bottom: 30px; }
+
+#advanced_searchform h4 {
+    margin-top: 30px; }
+
+#advanced_searchform form {
+    float: none;
+    margin: 0px auto; }
+
+.search-parameters {
+    line-height: 150%; 
+    margin-bottom: 30px; }
+
+.fancy-checkboxes {
+    width: 80%;
+    margin: 0px auto 20px;
+    line-height: 170%;
+    overflow: auto; }
+
+.checkbox {
+    width: 30%;
+    display: inline-block; }
+
+label {
+    margin: 0 5px; }
+
+.button-centered {
+    text-align: center; }
+
+/************************************/
 /*     FOOTER                       */
 /************************************/
 
@@ -233,5 +280,4 @@ footer {
     border-top: 1px solid #eaeaea;
     padding: 20px 0;
     font-size: 80%;
-    color: #666;
-}
+    color: #666; }
