--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <head>
 <title>Projektarkiv</title>
 <meta charset="utf-8">
-<link rel=stylesheet type=text/css href="{{ url_for('style', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
