--- a/templates/list.html
+++ b/templates/list.html
@@ -14,7 +14,7 @@
     		<div class="span4">
 				<a href="#">
 				<div class="project-thumbnail">
-				<a href="/project/{{ project.project_no }}"><img src="{{ url_for('images', filename=project.small_image) }}" alt="project bild"/></a>
+				<a href="/project/{{ project.project_no }}"><img src="{{ url_for('static', filename=project.small_image) }}" alt="project bild"/></a>
 				</div>
 				</a>
 			</div>
