--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -33,7 +33,7 @@
 
 <footer class="main-footer">
 	<div class="container">
-	© 2013 Olle Kvarnström, Maija Vilkina
+        {{ info.footer }}
 	</div>
 </footer>
 
