--- a/web/templates/main.html
+++ b/web/templates/main.html
@@ -6,8 +6,8 @@
 	
 <div class="row" id="herounit">
 <div class="span5">
-	<h1>Code is poetry</h1>
-	<div class="intro">En hemsida för studieprojekt av Olle Kvarnström och Maija Vilkina</div>
+	<h1>{{ info.main_headline }}</h1>
+	<div class="intro">{{ info.main_description }}</div>
 </div>
 
 <div class="span7">
