--- a/web/templates/tech.html
+++ b/web/templates/tech.html
@@ -4,8 +4,8 @@
 <section id="tech-list">
 	<div class="container">
 	
-	<h1>Wut Python?</h1>
-	<div class="intro">Varje dag blir vi lite bättre på att använda olika språk och platformer för att lösa problem. Nedan hittar du alla teknologier vi har använt i våra projekt.</div>
+	<h1>{{ info.tech_headline }}</h1>
+	<div class="intro">{{ info.tech_description }}</div>
 	
 	{% for tech in techs %}
 		<h4>{{ tech }}</h4>
