Added bug causing 404 when searching from inside a project

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -18,7 +18,7 @@
 	 </nav>
 	 
 	 <div id="search">
-		<form method="POST" action="search"> 
+		<form method="POST" action="/search"> 
 		  <input name="key" type="text" placeholder="Sök"/>
 		  <input type="submit" value="Sök" />
 		  </form>
